[project]
name = "try-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.2",
    "langchain-tavily>=0.1.5",
    "langgraph>=0.3.21",
    "langgraph-cli[inmem]>=0.1.81",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.5.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
